--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
 	"keywords": [],
 	"main": "src/index.js",
 	"dependencies": {
-		"@amcharts/amcharts5": "5.0.0-beta.33",
+		"@amcharts/amcharts5": "^5.2.29",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
-		"react-scripts": "4.0.0"
+		"react-scripts": "^5.0.1"
 	},
 	"devDependencies": {
 		"@babel/runtime": "7.13.8"
