--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
 	"main": "src/index.js",
 	"dependencies": {
 		"@amcharts/amcharts5": "^5.2.29",
-		"react": "17.0.2",
-		"react-dom": "17.0.2",
+		"react": "18.0.0",
+		"react-dom": "18.0.0",
 		"react-scripts": "^5.0.1"
 	},
 	"devDependencies": {
-		"@babel/runtime": "7.13.8"
+		"@babel/runtime": "7.13.8",
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/react": "^13.4.0"
 	},
 	"scripts": {
 		"start": "react-scripts start",
